# fomowell_app

./: .gitignore  LICENSE  README.md  canister_ids.json  dfx.json
canisterId/local/: canister_ids.json
canisterId/test/: canister_ids.json
fomowell-frontend/: build-script.js  canister_ids.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
fomowell-frontend/artemis-web3-adapter/: package.json
fomowell-frontend/artemis-web3-adapter/src/: index.js
fomowell-frontend/assets/.well-known/: ic-domains
fomowell-frontend/config/: development_canister_ids.json  env.ts
fomowell-frontend/src/: App.tsx  main.css  main.tsx
fomowell-frontend/src/api/: cycles_ledger.ts  fomowell_launcher.ts  fomowell_project.ts  getCoinCreateOrHold.ts  icpex_pool.ts  icpex_router.ts  icpex_transactions.ts  icrc2_ledger.ts  img_request.ts  ledger.ts
fomowell-frontend/src/layout/: index.tsx  theme.ts
fomowell-frontend/src/routes/: Routing.tsx
fomowell-frontend/src/store/: app.ts  token.ts
fomowell-frontend/src/utils/: account.ts  appType.ts  common.ts  env.ts  fee.ts  (+4 more)
fomowell-icpex-lib/: Cargo.toml
fomowell-icpex-lib/src/: ic_utils.rs  lib.rs  pmm.rs
fomowell-icpswap-lib/: Cargo.toml
fomowell-icpswap-lib/src/: constants.rs  icp_swap_calculator_canister.rs  icp_swap_factory_canister.rs  icp_swap_passcode_manager_canister.rs  icp_swap_pool_canister.rs  icrc1.rs  launch.rs  lib.rs  types.rs  withdraw.rs
fomowell-kongswap-lib/: Cargo.toml
fomowell-launcher/: Cargo.toml  build.sh  canister_ids.json  fomowell-launcher.did
fomowell-launcher/src/: commons.rs  config.rs  main.rs  project_pj.rs  user_pj.rs
fomowell-pool/: Cargo.toml  fomowell_pool.did
fomowell-pool/src/: main.rs
fomowell-project/: Cargo.toml  build.sh
fomowell-project/src/: comment.rs  main.rs
fomowell-sonic-lib/: Cargo.toml
fomowell-sonic-lib/src/: isonic.rs  lib.rs  types.rs
(+88 files in other folders)
